fix DT-2002, add spacing below the gallery widget for FF

--- a/less/widgets.less
+++ b/less/widgets.less
@@ -393,7 +393,7 @@ a.company-link:hover {
 .gallery__gallery-item {
     position: relative;
     width: 32%;
-    margin-bottom: 2%;
+    margin-bottom: 20px;
     // Display 100% at mobile
     @media @mobile {
         width: 100%;
